--- a/ZooZooZoo/zh-Hans.lproj/Localizable.strings
+++ b/ZooZooZoo/zh-Hans.lproj/Localizable.strings
@@ -28,3 +28,10 @@
 "ferret"    = "雪貂";
 "parakeet"  = "鹦鹉";
 "penguin"   = "企鹅";
+
+"review_detail"     = "你确定你想收到的意见和要求？";
+"review_no1"        = "没有";
+"review_yes1"       = "是";
+"review_no2"        = "没有";
+"review_yes2"       = "欢呼";
+"review_request"    = "⭐️⭐️⭐️⭐️⭐️你会在检讨欢呼？";
