--- a/ZooZooZoo/fr.lproj/Localizable.strings
+++ b/ZooZooZoo/fr.lproj/Localizable.strings
@@ -28,3 +28,10 @@
 "ferret"   = "Furet";
 "parakeet" = "Perruche";
 "penguin"  = "Manchot";
+
+"review_detail"     = "Êtes-vous sûr de vouloir reçu les avis et les demandes?";
+"review_no1"        = "Non";
+"review_yes1"       = "Oui";
+"review_no2"        = "Non";
+"review_yes2"       = "Acclamation";
+"review_request"    = "⭐️⭐️⭐️⭐️⭐️ Voulez- vous remonter le moral à l'examen?";
