--- a/ZooZooZoo/fr.lproj/Main.strings
+++ b/ZooZooZoo/fr.lproj/Main.strings
@@ -4,3 +4,16 @@
 
 /* Class = "UIButton"; normalTitle = "…\n "; ObjectID = "zze-nX-5BJ"; */
 "zze-nX-5BJ.normalTitle" = "…\n ";
+
+
+/* Class = "UILabel"; text = "ご利用ありがとうございます"; ObjectID = "rNx-qb-Aeo"; */
+"rNx-qb-Aeo.text" = "Nous vous remercions de votre utilisation";
+
+/* Class = "UIButton"; normalTitle = "使いやすい"; ObjectID = "Fxn-ua-jBS"; */
+"Fxn-ua-jBS.normalTitle" = "Facile à utiliser";
+
+/* Class = "UIButton"; normalTitle = "よくない"; ObjectID = "VZc-XX-ZNY"; */
+"VZc-XX-ZNY.normalTitle" = "Pas bon";
+
+/* Class = "UILabel"; text = "Alwayzooの使い心地はいかがでしょうか？"; ObjectID = "cHs-ld-I4h"; */
+"cHs-ld-I4h.text" = "Pourquoi ne pas confortable à utiliser Alwayzoo?";
