--- a/ZooZooZoo/it.lproj/Localizable.strings
+++ b/ZooZooZoo/it.lproj/Localizable.strings
@@ -27,3 +27,10 @@
 "ferret"   = "Furetto";
 "parakeet" = "Parrocchetto";
 "penguin"  = "Pinguino";
+
+"review_detail"     = "Sei certo di voler ricevuto i pareri e le richieste?";
+"review_no1"        = "No";
+"review_yes1"       = "sì";
+"review_no2"        = "No";
+"review_yes2"       = "Rallegrare";
+"review_request"    = "⭐️⭐️⭐️⭐️⭐️ Volete rallegrare nella revisione?";
